# openmetrics-cli-reader

./: Cargo.toml  README.md
src/: client.rs  main.rs  metrics.rs  parse.rs
src/metrics/: metric_types.rs  mod.rs
test_metrics/: multiple_counters  multiple_gauges  multiple_statesets  simple_counter  simple_gauge  simple_gaugehistogram  simple_histogram  simple_info  simple_stateset  summary  summary_quantiles  the_big_one
