[package]
name = "openmetrics-cli-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
color-eyre = "0.6.2"
miette = { version = "5.5.0", features = ["fancy"] }
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.1.0"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }

[[bin]]
name = "read-metrics"
path = "src/main.rs"
